--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- bootsrap -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <!-- css style -->
-  <link rel="stylesheet" href="./CSS/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
