--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- bootsrap -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <!-- css style -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="./CSS/style.css" />
 </head>
 
 <body>
@@ -61,7 +61,7 @@
         <h2 class="select-none">Online store </h2>
         <h1 class="select-none">for selling furniture</h1>
         <p class="select-none">Save More With coupons & up to 50% off!</p>
-        <button class="shop-1">Shop Now</button>
+        <button class="shop-1" >Shop Now</button>
       </div>
     </div>
 
